# partitionAndFormatOnWindows

./: CMakeLists.txt  README.md
src/: main.cpp
